added the possibility to load tweets

--- a/twitter-aggregator-client/package.json
+++ b/twitter-aggregator-client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "approximate-number": "^2.0.0",
+    "epoch-timeago": "^1.1.9",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
