--- a/twitter-aggregator-client/package.json
+++ b/twitter-aggregator-client/package.json
@@ -9,10 +9,12 @@
     "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-undo": "^0.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
