--- a/twitter-aggregator-client/package.json
+++ b/twitter-aggregator-client/package.json
@@ -15,8 +15,7 @@
     "react-scripts": "^2.1.8",
     "react-spinners": "^0.5.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "redux-undo": "^0.6.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
